--- a/app.json
+++ b/app.json
@@ -3,8 +3,7 @@
         "version": "1.0"
     },
     "plugin_box": {
-        "version": "3.1",
-        "share": "yes"
+        "version": "3.1"
     },
     "application": {
         "id": "090845_youtube",
